Added constant file for swagger doc constant string